operators/authorino-operator/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: vllm-authorino-filter
  namespace: models
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: vllm-mistral-7b
    component: gateway
spec:
  workloadSelector:
    labels:
      app: vllm-mistral-7b
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ext_authz
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
          transport_api_version: V3
          grpc_service:
            envoy_grpc:
              cluster_name: authorino-authorino-authorization.redhat-ods-applications-auth-provider.svc.cluster.local
            timeout: 1s
          failure_mode_allow: false
